--- a/agileprinciples-app/package.json
+++ b/agileprinciples-app/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
+    "vue-carousel-3d": "^0.2.0",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
@@ -33,8 +35,14 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.1.2",
     "jquery": "^3.4.1",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "popper.js": "^1.16.1",
     "prettier": "^1.19.1",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11"
   }
